force-app/main/default/objects/Accreditation_Certification__c/Accreditation_Certification__c.object-meta.xml
<CustomObject>
    <label>Accreditation/Certification</label>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Accreditation/Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditation/Certifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>