force-app/main/default/objects/Accreditation_Certification__c/fields/AC_ID__c.field-meta.xml
<CustomField>
    <fullName>AC_ID__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>AC ID</label>
    <type>AutoNumber</type>
</CustomField>