force-app/main/default/objects/Accreditation_Certification__c/fields/Accreditation_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Decision_Date__c</fullName>
    <label>Accreditation Decision Date</label>
    <type>Date</type>
</CustomField>