force-app/main/default/objects/Accreditation_Certification__c/fields/Accreditation_Status__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Status__c</fullName>
    <description>Singles whether a service is accredited or not.</description>
    <label>Accreditation Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Decision_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accredited</fullName>
            </value>
            <value>
                <fullName>Not Accredited</fullName>
            </value>
            <value>
                <fullName>Vary</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>