force-app/main/default/objects/Accreditation_Certification__c/fields/Accreditation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Type__c</fullName>
    <label>Accreditation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>