force-app/main/default/objects/Accreditation_Certification__c/fields/Active_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Status_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Status Flag</label>
    <type>Checkbox</type>
</CustomField>