force-app/main/default/objects/Accreditation_Certification__c/fields/Certification_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Decision_Date__c</fullName>
    <label>Certification Decision Date</label>
    <type>Date</type>
</CustomField>