force-app/main/default/objects/Accreditation_Certification__c/fields/Certification_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_End_Date__c</fullName>
    <label>Certification End Date</label>
    <type>Date</type>
</CustomField>