force-app/main/default/objects/Accreditation_Certification__c/fields/Certification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Start_Date__c</fullName>
    <label>Certification Start Date</label>
    <type>Date</type>
</CustomField>