force-app/main/default/objects/Accreditation_Certification__c/fields/Comment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Effective_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Comment Effective Date</label>
    <type>Date</type>
</CustomField>