force-app/main/default/objects/Accreditation_Certification__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date Accreditation Decision was made</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>