force-app/main/default/objects/Accreditation_Certification__c/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <description>Record Accreditation decision type.</description>
    <label>Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Continue without adding Accreditation details</fullName>
            </value>
            <value>
                <fullName>Record Commencing Service Accreditation</fullName>
            </value>
            <value>
                <fullName>Record a Decision to Accredit</fullName>
            </value>
            <value>
                <fullName>Record a Decision to Accredit due to Determination of Exceptional Circumstances by the Secretary</fullName>
            </value>
            <value>
                <fullName>Record a Decision not to Accredit</fullName>
            </value>
            <value>
                <fullName>Extend Accreditation Period</fullName>
            </value>
            <value>
                <fullName>Variation to Period</fullName>
            </value>
            <value>
                <fullName>Record a Decision to Revoke</fullName>
            </value>
            <value>
                <fullName>Record a Decision to Vary</fullName>
            </value>
            <value>
                <fullName>Revoke Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>