force-app/main/default/objects/Accreditation_Certification__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Details the end date of the accreditation period.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>