force-app/main/default/objects/Accreditation_Certification__c/fields/GPMS_Accreditation_Check__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Accreditation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if  Accreditation record exists or not</description>
    <label>Accreditation Check</label>
    <type>Checkbox</type>
</CustomField>