force-app/main/default/objects/Accreditation_Certification__c/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <formula>&apos;ACC-&apos;+IF(ISBLANK(Oracle_ID__c),Name,TEXT(Oracle_ID__c))</formula>
    <label>Integration ID</label>
    <type>Text</type>
</CustomField>