force-app/main/default/objects/Accreditation_Certification__c/fields/Is_Variation__c.field-meta.xml
<CustomField>
    <fullName>Is_Variation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Variation</label>
    <type>Checkbox</type>
</CustomField>