force-app/main/default/objects/Accreditation_Certification__c/fields/Oracle_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_External_ID__c</fullName>
    <description>External Id for Data Migration Purpose</description>
    <externalId>true</externalId>
    <label>Oracle External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>