force-app/main/default/objects/Accreditation_Certification__c/fields/Proceed_of_latest_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Proceed_of_latest_Accreditation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceed of latest Accreditation</label>
    <type>Checkbox</type>
</CustomField>