force-app/main/default/objects/Accreditation_Certification__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Accreditation/Certifications</relationshipLabel>
    <relationshipName>Accreditation_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>