force-app/main/default/objects/Accreditation_Certification__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Details the start date of the accreditation period.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>