force-app/main/default/objects/Accreditation_Certification__c/recordTypes/Accreditation.recordType-meta.xml
<RecordType>
    <fullName>Accreditation</fullName>
    <active>true</active>
    <description>Accreditation</description>
    <label>Accreditation</label>

</RecordType>