force-app/main/default/objects/Accreditation_Certification__c/recordTypes/Certification.recordType-meta.xml
<RecordType>
    <fullName>Certification</fullName>
    <active>true</active>
    <description>Certification</description>
    <label>Certification</label>
</RecordType>