force-app/main/default/objects/Accreditation_Certification__c/recordTypes/Fire_and_Safety_Compliance.recordType-meta.xml
<RecordType>
    <fullName>Fire_and_Safety_Compliance</fullName>
    <active>true</active>
    <description>Fire and Safety Compliance</description>
    <label>Fire and Safety Compliance</label>
</RecordType>