force-app/main/default/objects/Accreditation_Certification__c/recordTypes/Privacy_and_Space_Compliance.recordType-meta.xml
<RecordType>
    <fullName>Privacy_and_Space_Compliance</fullName>
    <active>true</active>
    <description>Privacy and Space Compliance</description>
    <label>Privacy and Space Compliance</label>
</RecordType>