force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_Accreditation_Decision_Date_FUT.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_Accreditation_Decision_Date_FUT</fullName>
    <active>true</active>
    <description>Accreditation Decision Date is mandatory except for Record Commencing Service Accreditation.</description>
    <errorConditionFormula>Decision_Date__c&gt;Today()</errorConditionFormula>
    <errorDisplayField>Decision_Date__c</errorDisplayField>
    <errorMessage>Accreditation Decision Date Cannot be future date</errorMessage>
</ValidationRule>