force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_Accreditation_Decision_Date_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_Accreditation_Decision_Date_Val</fullName>
    <active>true</active>
    <description>Accreditation Decision Date is mandatory except for Record Commencing Service Accreditation.</description>
    <errorConditionFormula>AND(
ISBLANK( Decision_Date__c ),
NOT(ISPICKVAL(Decision_Type__c,&quot;Record Commencing Service Accreditation&quot;)),
RecordType.DeveloperName=&quot;Accreditation&quot;
)</errorConditionFormula>
    <errorDisplayField>Decision_Date__c</errorDisplayField>
    <errorMessage>Accreditation Decision Date is mandatory.</errorMessage>
</ValidationRule>