force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_Accreditation_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_Accreditation_End_Date</fullName>
    <active>true</active>
    <description>Accreditation End Date should be after Accreditation Start Date.</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),!ISBLANK(End_Date__c),End_Date__c&lt;Start_Date__c)</errorConditionFormula>
    <errorMessage>End Date should be after Start Date.</errorMessage>
</ValidationRule>