force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_Accreditation_Proceed.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_Accreditation_Proceed</fullName>
    <active>true</active>
    <description>Check the new accreditation cannot preceed the latest accreditation</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),Proceed_of_latest_Accreditation__c,NOT(ISPICKVAL(Decision_Type__c,&apos;Record a Decision not to Accredit&apos;)))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>The Start Date cannot preceed the latest Accreditation</errorMessage>
</ValidationRule>