force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_Certification_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_Certification_End_Date</fullName>
    <active>false</active>
    <description>Certification End Date should be after Certification Start Date.</description>
    <errorConditionFormula>AND(!ISBLANK(End_Date__c),End_Date__c&lt;Start_Date__c)</errorConditionFormula>
    <errorMessage>Certification End Date should be after Certification Start Date.</errorMessage>
</ValidationRule>