force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_DecisionDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_DecisionDate</fullName>
    <active>true</active>
    <description>Start date and decision date are mandatory for accreditation and certificate records</description>
    <errorConditionFormula>AND( NOT($Setup.BypassTriggers__c.BypassValidationRules__c), OR(RecordType.DeveloperName = &quot;Certification&quot;, RecordType.DeveloperName = &quot;Accreditation&quot;), ISBLANK(  Decision_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Decision_Date__c</errorDisplayField>
    <errorMessage>Decision Date is mandatory</errorMessage>
</ValidationRule>