force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_EndDate</fullName>
    <active>true</active>
    <description>End Date is mandatory for Record a Decision to Accredit and Extend Accreditation Period</description>
    <errorConditionFormula>AND(
NOT($Setup.BypassTriggers__c.BypassValidationRules__c),				
NOT(ISPICKVAL(Decision_Type__c,&apos;Record Commencing Service Accreditation&apos;)),
NOT(ISPICKVAL(Decision_Type__c,&apos;Record a Decision to Accredit due to Determination of Exceptional Circumstances by the Secretary&apos;)),
NOT(ISPICKVAL(Decision_Type__c,&apos;Record a Decision not to Accredit&apos;)),
NOT(ISPICKVAL(Decision_Type__c,&apos;Revoke Period&apos;)),
ISBLANK(End_Date__c), RecordType.DeveloperName=&apos;Accreditation&apos;
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date is mandatory</errorMessage>
</ValidationRule>