force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_EndDate_12Month.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_EndDate_12Month</fullName>
    <active>true</active>
    <description>End date must be in 12 month of start date for Record Commencing Service Accreditation</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
ISPICKVAL(Decision_Type__c,&apos;Record Commencing Service Accreditation&apos;),OR(
End_Date__c &gt; ADDMONTHS(Start_Date__c,12),ISBLANK(End_Date__c))
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The end date must be 12 months from the start date</errorMessage>
</ValidationRule>