force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_EndDate_6Month.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_EndDate_6Month</fullName>
    <active>true</active>
    <description>End date must be in 6 month of start date for Record a Decision to Accredit due to Determination of Exceptional Circumstances by the Secretary</description>
    <errorConditionFormula>AND(
NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
ISPICKVAL(Decision_Type__c,&apos;Record a Decision to Accredit due to Determination of Exceptional Circumstances by the Secretary&apos;),
OR(ISBLANK(End_Date__c ),End_Date__c &gt;  ADDMONTHS(Start_Date__c,6))
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be in 6 months from start date</errorMessage>
</ValidationRule>