force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_EndDate_NotValid.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_EndDate_NotValid</fullName>
    <active>true</active>
    <description>Cannot enter End date when Record a Decision not to Accredit is selected.</description>
    <errorConditionFormula>AND(
NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
ISPICKVAL(Decision_Type__c,&apos;Record a Decision not to Accredit&apos;),
NOT(ISBLANK(End_Date__c))
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be entered for this Decision Type</errorMessage>
</ValidationRule>