force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Check_Non_Active_Accreditation_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Check_Non_Active_Accreditation_Update</fullName>
    <active>true</active>
    <description>Non-active accreditation record cannot be updated except active status flag</description>
    <errorConditionFormula>AND(
NOT( $Setup.BypassTriggers__c.BypassValidationRules__c ),
NOT( ISNEW() ),
RecordType.DeveloperName =&apos;Accreditation&apos;,
OR(
ISCHANGED( Start_Date__c ),
ISCHANGED( End_Date__c ),
ISCHANGED( Decision_Type__c ),
ISCHANGED( Accreditation_Status__c),
ISCHANGED( Comment__c ),
ISCHANGED( Decision_Date__c )),
NOT( Active_Status_Flag__c )
)</errorConditionFormula>
    <errorMessage>Non-active accreditations cannot be edited</errorMessage>
</ValidationRule>