force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Comment_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Comment_Mandatory</fullName>
    <active>true</active>
    <description>Comment is mandatory.</description>
    <errorConditionFormula>AND(!ISNEW(),
NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
OR(RecordType.DeveloperName = &quot;Fire_and_Safety_Compliance&quot;,
RecordType.DeveloperName = &quot;Privacy_and_Space_Compliance&quot;),
TEXT(PRIORVALUE( Status__c) ) &lt;&gt; TEXT(Status__c),
ISBLANK(Comment__c))</errorConditionFormula>
    <errorMessage>Comment is mandatory.</errorMessage>
</ValidationRule>