force-app/main/default/objects/Accreditation_Certification__c/validationRules/AC_Comment_Mandatory_with_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>AC_Comment_Mandatory_with_end_date</fullName>
    <active>true</active>
    <description>Comment is mandatory if decision to accredit end date</description>
    <errorConditionFormula>AND(
NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
RecordType.DeveloperName =&apos;Accreditation&apos;,
ISPICKVAL(Decision_Type__c,&apos;Record a Decision to Accredit&apos;),
End_Date__c &lt; ADDMONTHS(Start_Date__c,36),ISBLANK(Comment__c))</errorConditionFormula>
    <errorMessage>Comment is mandatory if decision to accredit end date is less than 3 years from the start date</errorMessage>
</ValidationRule>